--- a/www/views/discover.html
+++ b/www/views/discover.html
@@ -7,12 +7,12 @@
 
 <table id="chats">
     <tr ng-repeat="mentor in mentors">
-    <td>
-      <img ng-src="{{ mentor.picture_url }}" alt="" />
-    </td>
+      <td>
+        <img ng-src="{{ mentor.picture_url }}" alt="" />
+      </td>
     <td>
       <strong>{{ mentor.first_name }} {{ mentor.last_name }}:</strong>
-      {{ mentor.bio | linky }}
+      <p>{{ mentor.bio | linky }}</p>
     </td>
   </tr>
 </table>
