Add nice chat header

--- a/www/views/chat.html
+++ b/www/views/chat.html
@@ -1,7 +1,7 @@
 <nav>
   <ul>
-    <li><a href="#/bio">Bio</a></li>
-    <li><a href="#/discover">Discover</a></li>
+    <li class="nav-right"><a href="/#/"><i class="fa fa-angle-left"></i></a></li>
+    <li><a href="">Chat with {{ to.first_name }} {{ to.last_name }}</a></li>
   </ul>
 </nav>
 
