--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,3 +1,8 @@
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 body, html {
   padding: 0;
   margin: 0;
@@ -99,4 +104,73 @@ nav ul li a {
 #bio img {
   width: 10em;
   border-radius: 50%;
+}
+
+.message-bar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 50px;
+  border-top: 2px solid #eee;
+  background: #f9f9f9;
+}
+
+.message-bar input {
+  border: none;
+  font-family: Lato;
+  font-size: 0.9em;
+  background: none;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  width: calc(100% - 100px);
+  padding: 0 10px 0 10px;
+  outline: none;
+}
+
+.message-bar a.send {
+  color: #6CC470;
+  float: right;
+  line-height: 50px;
+  font-size: 1.2em;
+  padding-right: 15px;
+}
+
+.message-bar .reveal {
+  position: absolute;
+  left: 50%;
+  bottom: 100%;
+  padding: 0.5em;
+  border-radius: 5px;
+  background: #6CC470;
+  color: #eee;
+  font-size: 0.9em;
+  transform: translateX(-50%);
+  margin-bottom: 25px;
+  height: auto;
+  box-shadow: 0 2px 0 #5ea860;
+}
+
+.message-bar .reveal:after {
+  content: "";
+  display: block;
+  position: absolute;
+  margin-left: -10px;
+  border: 10px solid transparent;
+  left: 50%;
+  border-top-color: #6CC470;
+  top: 100%;
+}
+
+.message-bar .reveal:before {
+  content: "";
+  display: block;
+  position: absolute;
+  margin-left: -12px;
+  border: 12px solid transparent;
+  left: 50%;
+  border-top-color: #5ea860;
+  top: 100%;
+  margin-top: 0;
 }
