--- a/www/views/chat.html
+++ b/www/views/chat.html
@@ -8,7 +8,7 @@
 <div>
   <ul>
     <li ng-repeat="m in messages" ng-class="{mine: m.id == USER_ID}">
-      {{ m.username }}: {{ m.messsage }}
+      {{ m.username }}: {{ m.message }}
     </li>
   </ul>
 
