--- a/www/views/chat.html
+++ b/www/views/chat.html
@@ -14,7 +14,7 @@
 
 
   <div class="message-bar">
-    <a href="#" class="reveal">
+    <a ng-click="revealIdentity()" class="reveal">
       <span class="fa fa-user"></span>
       Reveal identity
     </a>
