--- a/www/views/chat.html
+++ b/www/views/chat.html
@@ -1,7 +1,7 @@
 <nav>
   <ul>
     <li class="nav-right"><a href="/#/"><i class="fa fa-angle-left"></i></a></li>
-    <li><a href="">Chat with {{ to.first_name }} {{ to.last_name }}</a></li>
+    <li><a href="">Chat with {{ to.first_name }}</a></li>
   </ul>
 </nav>
 
@@ -18,6 +18,7 @@
       <span class="fa fa-user"></span>
       Reveal identity
     </a>
+
     <input type="text" ng-model="message" placeholder="Send a message">
     <a href="" class="send" ng-click="sendMessage($event)"><span class="fa fa-send"></span></a>
   </div>
