--- a/www/views/dashboard.html
+++ b/www/views/dashboard.html
@@ -1,7 +1,7 @@
 <nav>
   <ul>
     <li><a href="#/bio">Bio</a></li>
-    <li><a href="#/discover">Discover</a></li>
+    <li ng-hide="PETER"><a href="#/discover">Discover</a></li>
   </ul>
 </nav>
 <table id="chats">
